# minreq

./: Cargo.toml  README.md
examples/: hello.rs  iterator.rs  json.rs
src/: connection.rs  http_url.rs  lib.rs  request.rs  response.rs
tests/: main.rs  setup.rs
