[package]
name = "async_minreq"
version = "2.13.3-alpha"
authors = ["Jens Pitkanen <jens@neon.moe>", "Beulah Evanjalain" ]
description = "Simple, minimal-dependency HTTP client"
# documentation = "https://docs.rs/minreq"
homepage = "https://github.com/BEULAHEVANJALIN/async-minreq"
repository = "https://github.com/BEULAHEVANJALIN/async-minreq"
readme = "README.md"
keywords = ["http", "https", "client", "request", "json"]
categories = ["web-programming::http-client"]
license = "ISC"
edition = "2018"

[badges]
travis-ci = { repository = "BEULAHEVANJALIN/async-minreq" }
maintenance = { status = "actively-maintained" }

[dependencies]
# For the urlencoding feature:
urlencoding = { version = "2.1.0", optional = true }
# For the punycode feature:
punycode = { version = "0.4.1", optional = true }
# For the json-using-serde feature:
serde = { version = "1.0.218", optional = true }
serde_json = { version = "1.0.138", optional = true }
# For the proxy feature:
base64 = { version = "0.22.1", optional = true }
# For the https features:
rustls = { version = "0.23.25", optional = true }
rustls-native-certs = { version = "0.8.0", optional = true }
webpki-roots = { version = "0.26.0", optional = true }
rustls-webpki = { version = "0.103.0", optional = true }
openssl = { version = "0.10.29", optional = true }
log = { version = "0.4.0" }
openssl-probe = { version = "0.1", optional = true }
tokio = { version = "1.44.0", features = ["net", "time", "io-util"] }
tokio-util = { version = "0.7.14", features = ["io"] }
tokio-stream = "0.1.17"
futures-core = "0.3.31"
bytes = "1.10.1"
pin-project = "1.1.10"
tokio-rustls = "0.26.2"
rustls-pki-types = "1.11.0"
webpki = "0.22.4"
tokio-native-tls = { version = "0.3.1", optional = true }
native-tls = { version = "0.2", optional = true }
once_cell = "1.20.3"

[dev-dependencies]
tiny_http = "0.12"
chrono = "0.4.0"
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
features = ["json-using-serde", "proxy", "https", "punycode"]

[features]
https = ["https-rustls"]
https-rustls = ["rustls", "webpki-roots", "rustls-webpki"]
https-rustls-probe = ["rustls", "rustls-native-certs"]
https-bundled = ["openssl/vendored"]
https-bundled-probe = ["https-bundled", "openssl-probe"]
https-native = ["dep:tokio-native-tls","native-tls"]
json-using-serde = ["serde", "serde_json"]
proxy = ["base64"]

[[example]]
name = "hello"

[[example]]
name = "iterator"

[[example]]
name = "json"
required-features = ["json-using-serde"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(have_min_max_version)'] }

# vim: ft=conf